# fh6-drift-coach

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  install.sh  nuxt.config.ts  package-lock.json  package.json  start.ps1  start.sh
.github/workflows/: ci.yml  release.yml
app/assets/css/: main.css
app/components/: ConnectionStatus.vue  DriftAngleGauge.vue  DynoChart.vue  InputDisplay.vue  RpmStrip.vue  SessionMiniMap.vue  SuspBars.vue  SuspensionSprings.vue  TireGrid.vue
app/composables/: useCoachMemory.ts  useDyno.ts  useReferenceTunes.ts  useSessionLog.ts  useSessionRecorder.ts  useTelemetry.ts  useTune.ts  useTuneRevisions.ts
app/layouts/: default.vue
app/pages/: coach.vue  index.vue  settings.vue  tune.vue
scripts/: copy-nuxt.mjs  gen-icons.mjs  prepare-sidecar.ps1  prepare-sidecar.sh
server/api/: coach-memory.get.ts  coach-memory.post.ts  reference-tunes.get.ts  reference-tunes.post.ts  revisions.get.ts  revisions.post.ts  sessions.get.ts  sessions.post.ts  settings.get.ts  settings.post.ts
server/api/ai/: chat-stream.post.ts  chat.post.ts  providers.get.ts
server/api/coach-memory/: [id].delete.ts
server/api/dyno/: [carKey].delete.ts  [carKey].get.ts  [carKey].post.ts
server/plugins/: fh6-listener.ts
server/utils/: coach-memory-store.ts  dyno-store.ts  fh6-parser.ts  reference-tunes-store.ts  sessions-store.ts  settings-store.ts  telemetry-bus.ts  tuning-guide.ts
shared/: telemetry-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/empty-frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+6 files in other folders)
